week12/day2/task1/terraform/k8s_solution/db-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: postgres-db
 namespace: user-management
 labels:
   app: db
spec:
 replicas: 1
 selector:
   matchLabels:
     app: db
 template:
   metadata:
     labels:
       app: db
   spec:
     containers:
       - name: postgres
         image: postgres:16-alpine
         ports:
           - containerPort: 5432
         volumeMounts:
           - name: data
             mountPath: /var/lib/postgresql/data
             subPath: pgdata
     volumes:
       - name: data
         persistentVolumeClaim:
           claimName: postgres-pvc
