week12/day2/task1/terraform/k8s_solution/frontend-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: frontend-ingress
 namespace: user-management
 annotations:
   nginx.ingress.kubernetes.io/use-regex: "true"
   nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
 ingressClassName: nginx
 rules:
 - http:
     paths:
     - path: /(.*)
       pathType: ImplementationSpecific
       backend:
         service:
           name: frontend-clusterip-service
           port:
             number: 80
